--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,7 @@ body{
 .display-4{
     color:#bfbfbf;
 }
-.img-fluid{
+.selfie{
     max-width: 15%;
     height: auto;
     margin: 3%;
@@ -64,4 +64,14 @@ body{
     text-align:center;
     color: #ffffff;
     font-family:"script", "cursive", "calibri";
+}
+.mapview{
+    margin-left:1%;
+    margin-right:1%;
+}
+.mapfull{
+    max-width:98%;
+    padding:2.5%;
+    margin-left:auto;
+    margin-right:auto;    
 }
