--- a/css/custom.css
+++ b/css/custom.css
@@ -93,6 +93,7 @@ body{
     font-family:"palatino","bookman";
     list-style-position:outside;
     margin-left:5%;
+    margin-right:5%;
     line-height:200%;
 }
 .resumeheader{
